chore(config): configure JWT secret key and expiration duration (1h)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Aira
+# ? This is our little secret ? used to sign tokens and guard trust
+security:
+jwt:
+secret: SkyWhispersKeepMyTokenSafe32Chars!
+expiration-ms: 3600000 # 1 hour of peaceful access
