fix(config): no more ISO drama – UTF-8 and Redis now in harmony .️

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+# Project Info
 spring.application.name=Aira
-# ? This is our little secret ? used to sign tokens and guard trust
-security:
-jwt:
-secret: SkyWhispersKeepMyTokenSafe32Chars!
-expiration-ms: 3600000 # 1 hour of peaceful access
+
+# JWT Configuration
+security.jwt.secret=SkyWhispersKeepMyTokenSafe32Chars!
+security.jwt.expiration-ms=3600000
+
+# OpenWeather API Key
+openweather.api.key=your-api-key-here
+
+# Redis Configuration
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
