--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,17 @@ openweather.api.key=your-api-key-here
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+server.port=8080
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.javax.persistence.validation.mode=none
+
+spring.security.enabled=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/aira_db
+spring.datasource.username=postgres
+spring.datasource.password=ecememre28
+spring.datasource.driver-class-name=org.postgresql.Driver
+
