wip: temp weather data used due to pending OpenWeather API key activation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ security.jwt.secret=SkyWhispersKeepMyTokenSafe32Chars!
 security.jwt.expiration-ms=3600000
 
 # OpenWeather API Key
-openweather.api.key=your-api-key-here
+openweather.api.key=b09d351baecc9bee356fd70d937d3e9a
 
 # Redis Configuration
 spring.cache.type=redis
