small changes are added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ spring.security.enabled=false
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/aira_db
 spring.datasource.username=postgres
-spring.datasource.password=ecememre28
+spring.datasource.password=...........
 spring.datasource.driver-class-name=org.postgresql.Driver
 
